# Tweet_Loading_Demo

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: calculate_sentiment.py  load_tweets.py  normalize.py  script.py
sql/: analysis_queries.sql
