[project]
name = "tweet-loading-demo"
version = "0.1.0"
description = ""
authors = [
    { name = "Daniel Krasnov", email = "krasnovdanial@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
